# ROS

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/geek_gasteiz/: MsgGeek.h  SrvGeek.h  SrvGeekRequest.h  SrvGeekResponse.h
devel/lib/pkgconfig/: beginner_tutorials.pc  geek_gasteiz.pc  igor_package.pc
devel/lib/python2.7/dist-packages/geek_gasteiz/msg/: _MsgGeek.py  __init__.py
devel/lib/python2.7/dist-packages/geek_gasteiz/srv/: _SrvGeek.py  __init__.py
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/common-lisp/ros/geek_gasteiz/msg/: MsgGeek.lisp  _package.lisp  _package_MsgGeek.lisp  geek_gasteiz-msg.asd
devel/share/common-lisp/ros/geek_gasteiz/srv/: SrvGeek.lisp  _package.lisp  _package_SrvGeek.lisp  geek_gasteiz-srv.asd
devel/share/geek_gasteiz/cmake/: geek_gasteiz-msg-extras.cmake  geek_gasteiz-msg-paths.cmake  geek_gasteizConfig.cmake
devel/share/gennodejs/ros/geek_gasteiz/msg/: MsgGeek.js  _index.js
devel/share/gennodejs/ros/geek_gasteiz/srv/: SrvGeek.js  _index.js
devel/share/igor_package/cmake/: igor_packageConfig.cmake
devel/share/roseus/ros/geek_gasteiz/: manifest.l
devel/share/roseus/ros/geek_gasteiz/msg/: MsgGeek.l
devel/share/roseus/ros/geek_gasteiz/srv/: SrvGeek.l
src/beginner_tutorials/scripts/: talker.py
src/geek_gasteiz/: CMakeLists.txt  package.xml  typescript
src/geek_gasteiz/launch/: geek.launch
src/geek_gasteiz/msg/: MsgGeek.msg
src/geek_gasteiz/scripts/: client.py  key.py  move.py  publicador.py  publicar_key.py  server.py  subscribir_key.py  subscriptor.py  subscriptor.py.save  subscriptor.py.save.1  subscriptor.py.save.2  subscriptor.py.save.3
src/geek_gasteiz/srv/: SrvGeek.srv
src/igor_package/: CMakeLists.txt
src/igor_package/scripts/: publicador.py  subscriptor.py
